--- a/2.html
+++ b/2.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <h1>과일</h1>
+      <h1><a href="index.html">과일</a></h1>
     </header>
     <nav>
       <ol>
